{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 9,
  "lineage": "f815b588-ac55-8918-0c65-1d44c90a5daa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "My_VPC-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08abb3eeacc61972d",
            "arn": "arn:aws:ec2:ap-south-1:834397118761:instance/i-0f660eab5c1beb9c1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f660eab5c1beb9c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00edaa71d7b4d306d",
            "private_dns": "ip-10-0-1-58.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a03f6c42d985a693",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d80fb6265ddb0ae",
            "tags": {
              "Name": "My-VPC-Instance"
            },
            "tags_all": {
              "Name": "My-VPC-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0209cc8bce5a90ada"
            ]
          },
          "dependencies": [
            "aws_security_group.GFG-SG",
            "aws_subnet.gfg-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GFG-Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:internet-gateway/igw-0f4dde9b62cd5eb9c",
            "id": "igw-0f4dde9b62cd5eb9c",
            "owner_id": "834397118761",
            "tags": {
              "Name": "My-GFG-Gateway"
            },
            "tags_all": {
              "Name": "My-GFG-Gateway"
            },
            "vpc_id": "vpc-034dd64f66562809d"
          },
          "dependencies": [
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "GFG-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:route-table/rtb-022856ff9de524d22",
            "id": "rtb-022856ff9de524d22",
            "owner_id": "834397118761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4dde9b62cd5eb9c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-GFG-Routing-Table"
            },
            "tags_all": {
              "Name": "My-GFG-Routing-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-034dd64f66562809d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GFG-Gateway",
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "GFG-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cccd3c9e31629ab",
            "route_table_id": "rtb-022856ff9de524d22",
            "subnet_id": "subnet-04d80fb6265ddb0ae"
          },
          "dependencies": [
            "aws_internet_gateway.GFG-Gateway",
            "aws_route_table.GFG-RT",
            "aws_subnet.gfg-subnet",
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GFG-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:security-group/sg-0209cc8bce5a90ada",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0209cc8bce5a90ada",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              }
            ],
            "name": "MY-GFG-SG",
            "name_prefix": "",
            "owner_id": "834397118761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MY-GFG-SG"
            },
            "tags_all": {
              "Name": "MY-GFG-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-034dd64f66562809d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gfg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:subnet/subnet-04d80fb6265ddb0ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d80fb6265ddb0ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834397118761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-GFG-Subnet"
            },
            "tags_all": {
              "Name": "My-GFG-Subnet"
            },
            "vpc_id": "vpc-034dd64f66562809d"
          },
          "dependencies": [
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gfg-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:vpc/vpc-034dd64f66562809d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c356de6e4d2e97b1",
            "default_route_table_id": "rtb-0720f33a8c4886c41",
            "default_security_group_id": "sg-0258adeb1332257a6",
            "dhcp_options_id": "dopt-0d49c24fa63560924",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034dd64f66562809d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0720f33a8c4886c41",
            "owner_id": "834397118761",
            "tags": {
              "Name": "MY-GFG-VPC"
            },
            "tags_all": {
              "Name": "MY-GFG-VPC"
            }
          }
        }
      ]
    }
  ]
}